// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SpotlightScrollArea/> should render 1`] = `
<div>
  <div
    style="height: 272px;"
  >
    <div
      data-index="0"
      data-item-index="0"
    >
      <div>
        0 - item 1
      </div>
    </div>
    <div
      data-index="1"
      data-item-index="1"
    >
      <div>
        1 - item 2
      </div>
    </div>
    <div
      data-index="2"
      data-item-index="2"
    >
      <div>
        2 - item 3
      </div>
    </div>
    <div>
      end area
    </div>
  </div>
</div>
`;

exports[`<SpotlightScrollArea/> should render footer if loading 1`] = `
<div>
  <div
    style="height: 272px;"
  >
    <div
      data-index="0"
      data-item-index="0"
    >
      <div>
        0 - item 1
      </div>
    </div>
    <div
      data-index="1"
      data-item-index="1"
    >
      <div>
        1 - item 2
      </div>
    </div>
    <div
      data-index="2"
      data-item-index="2"
    >
      <div>
        2 - item 3
      </div>
    </div>
    <div
      class="loader"
    >
      <div>
        SkeletonLoader
      </div>
    </div>
    <div>
      end area
    </div>
  </div>
</div>
`;
